# micropython-provisioning

./: .gitmodules  Pipfile  README.md  provisioning.py  pyproject.toml  storeNVS.py
dev_tools/: deploy.sh  provide.http  test_server.py
examples/: esp32_buddy.py  simple.py
src/: provision.html  provisioning.py  transportSoftAP.py
