[tool.black]
line-length = 120

[tool.poetry]
authors = ["Sergei Silnov <po@kumekay.com>"]
description = "Provisioning framework for micropython"
license = "Apache-2.0"
name = "micropython-provisioning"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
black = {version = "*"}
pylint = {version = "*"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
